read signing key from env

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,4 @@ flyway.password=${spring.datasource.password}
 flyway.user=${spring.datasource.username}
 flyway.url=${spring.datasource.url}
 
-authentication.jwt.secretKey=secretKey
+authentication.jwt.secretKey=+1diNgAirFL3NHErZB4zaT37hwZuw4V2fNIk0FdnlIM=
