--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/entodo
+spring.datasource.url=jdbc:mysql://db:3306/entodo?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
