--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,28 +5,15 @@ FROM openjdk:8 as build
 WORKDIR /app
 
 # Copy maven executable to the image
-COPY ./target/entodo-0.0.1-SNAPSHOT.jar ./app.jar
+COPY mvnw .
+COPY .mvn .mvn
+
+# Copy the pom.xml file
+COPY pom.xml .
+
+# Copy the project source
+COPY src src
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
-#### Stage 1: Build the application
-#FROM openjdk:8 as build
-
-# Set the current working directory inside the image
-#WORKDIR /app
-
-# Copy maven executable to the image
-#COPY mvnw .
-#COPY .mvn .mvn
-
-# Copy the pom.xml file
-#COPY pom.xml .
-
-# Copy the project source
-#COPY src src
-
-#EXPOSE 8080
-
-#ENTRYPOINT ["./mvnw", "spring-boot:run"]
+ENTRYPOINT ["./mvnw", "spring-boot:run"]
